<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/etSäde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="312dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="8dp"
        android:labelFor="@+id/etSäde"
        android:text="@string/tSäde"
        app:layout_constraintBottom_toTopOf="@+id/etSäde"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPaksuus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="12dp"
        android:labelFor="@+id/etPaksuus"
        android:text="@string/tPaksuus"
        app:layout_constraintBottom_toTopOf="@+id/etPaksuus"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginBottom="52dp"
        android:text="@string/tLaskePainike"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="294dp"
        android:layout_height="94dp"
        android:layout_marginBottom="36dp"
        android:text="@string/action_settings"
        android:textAlignment="center"
        android:textSize="36dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        tools:layout_editor_absoluteX="58dp" />

</androidx.constraintlayout.widget.ConstraintLayout>